Set the titel and favicon in browser tab

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="initial-scale=1, width=device-width" /> <!-- GMaterial UI -->
 
@@ -11,8 +11,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     /> 
-    <title>Vite + React</title>
+    <title>Rick and Morty</title>
   </head>
+ 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
